Ready for Bitcoin Clashic (BCHC)
Removed:
- Anything that isnt compatible with Bitcoin Clashic.

Added:
- Ability to disable admin menu.

Edit:
- Anything that makes Bitcoin Clashic compatible

Testet and working at
http://rpc-v2.clashic.services

--- a/.env-sample
+++ b/.env-sample
@@ -2,10 +2,10 @@
 # See comments after each for more info.
 # Default: "btcexp:app,btcexp:error"
 #DEBUG=*  # Enable all logging, including middleware
-#DEBUG=btcexp:*  # Enable all logging specific to btc-rpc-explorer
+#DEBUG=btcexp:*  # Enable all logging specific to bchc-rpc-explorer
 #DEBUG=btcexp:app,btcexp:error  # Default
 
-# The base URL. If you want to run it elsewhere than on /, for example /btc-rpc-explorer/ - note that the value should include starting and ending "/"
+# The base URL. If you want to run it elsewhere than on /, for example /bchc-rpc-explorer/ - note that the value should include starting and ending "/"
 # Default: /
 #BTCEXP_BASEURL=/
 #BTCEXP_BASEURL=/explorer/
@@ -23,14 +23,14 @@
 # Defaults:
 #   - [host/port]: 127.0.0.1:8332
 #   - [username/password]: none
-#   - cookie: '~/.bitcoin/.cookie'
+#   - cookie: '~/.clashic/.cookie'
 #   - timeout: 5000 (ms)
-#BTCEXP_BITCOIND_URI=bitcoin://rpcusername:rpcpassword@127.0.0.1:8332?timeout=10000
+#BTCEXP_BITCOIND_URI=clashic://rpcusername:rpcpassword@127.0.0.1:8332?timeout=10000
 #BTCEXP_BITCOIND_HOST=127.0.0.1
-#BTCEXP_BITCOIND_PORT=8332
+#BTCEXP_BITCOIND_PORT=10332
 #BTCEXP_BITCOIND_USER=rpcusername
 #BTCEXP_BITCOIND_PASS=rpcpassword
-#BTCEXP_BITCOIND_COOKIE=/path/to/bitcoind/.cookie
+#BTCEXP_BITCOIND_COOKIE=/path/to/clashicd/.cookie
 #BTCEXP_BITCOIND_RPC_TIMEOUT=5000
 
 # Select optional "address API" to display address tx lists and balances
@@ -85,7 +85,7 @@
 # File where the SSO token is stored; ignored if BTCEXP_BASIC_AUTH_PASSWORD is provided.
 # Enables SSO if present.
 # Default: none
-#BTCEXP_SSO_TOKEN_FILE=/var/run/btc-rpc-explorer/sso_token
+#BTCEXP_SSO_TOKEN_FILE=/var/run/bchc-rpc-explorer/sso_token
 
 # URL of an optional external SSO provider
 # This is ignored if SSO is not enabled (see BTCEXP_SSO_TOKEN_FILE)
@@ -113,3 +113,7 @@
 # Show tools list in a sub-nav at top of screen
 # Default: true
 BTCEXP_UI_SHOW_TOOLS_SUBHEADER=true
+
+# Show admin dropdown in nav at top of screen
+# Default: false
+#BTCEXP_UI_SHOW_ADMIN=true
